# sub2api-account-scheduler

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
backend/: pyproject.toml
backend/src/scheduler/: __main__.py  api.py  codex_invite.py  config.py  models.py  policy.py  runner.py  store.py  ui.py
backend/tests/: mock_server.py  test_api.py  test_config.py  test_openai_subscription.py  test_policy.py  test_runner.py  test_store.py  test_ui.py
docs/: ACCOUNT_PRIORITY_7D_OPTIMIZATION_CN.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
src/scheduler/: __main__.py  api.py  config.py  models.py  policy.py  runner.py  store.py  ui.py
tests/: mock_server.py  test_api.py  test_policy.py  test_store.py  test_ui.py
