[project]
name = "sub2api-account-scheduler"
version = "0.1.0"
description = "7D pacing controller for sub2api accounts"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "scheduler"
